# fullstack-take-home

./: .cursorrules  .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: portfolios.py  upload.py
backend/app/database/: __init__.py  connection.py
backend/app/models/: __init__.py  portfolio.py
backend/app/utils/: database.py  file_management.py  validation.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/forms/: SectionSelector.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/components/portfolio/: EditItemModal.tsx  FileUpload.tsx  ItemCard.tsx  PortfolioView.tsx  SectionManager.tsx  UploadModal.tsx
frontend/components/ui/: Button.tsx  ErrorAlert.tsx  Input.tsx  MediaPreview.tsx  Modal.tsx
frontend/hooks/: useFormSections.ts
frontend/store/: portfolioStore.ts
frontend/types/: portfolio.ts
